// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pushCss -> ([], []) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "13o7eu2",
      "styles": "display:block;",
    },
  ],
}
`;

exports[`pushCss -> ([], {}) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "13o7eu2",
      "styles": "display:block;",
    },
  ],
}
`;

exports[`pushCss -> ({}, []) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "13o7eu2",
      "styles": "display:block;",
    },
    Object {
      "name": "6n7j50",
      "styles": "display:inline;",
    },
  ],
}
`;

exports[`pushCss -> ({}, {}) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "13o7eu2",
      "styles": "display:block;",
    },
    Object {
      "name": "6n7j50",
      "styles": "display:inline;",
    },
  ],
}
`;

exports[`pushCss -> (null, []) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "6n7j50",
      "styles": "display:inline;",
    },
  ],
}
`;

exports[`pushCss -> (null, {}) 1`] = `
Object {
  "css": Array [
    Object {
      "name": "13o7eu2",
      "styles": "display:block;",
    },
  ],
}
`;
